# Financial_Report_Decode

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: tcl_1070_hk_2025h1_snapshot.json
src/financial_report_decode/: __init__.py  config.py  main.py  models.py
src/financial_report_decode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/financial_report_decode/clients/: llm_client.py  local_db_client.py  mock_llm_client.py  network_search_client.py  pdf_client.py  report_db_client.py
src/financial_report_decode/services/: chunker.py  orchestrator.py  pdf_parser.py  report_analyzer.py  report_value.py
src/financial_report_decode/utils/: markdown.py
tests/: test_chunker.py  test_local_db_client.py  test_markdown.py  test_network_search_client.py  test_pdf_parser.py  test_report_analyzer.py  test_report_db_client.py  test_report_value.py
