[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-report-decode"
version = "0.1.0"
description = "Collects and analyzes financial report data from local DB, PDF documents, and web search."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "ocrmac>=1.0.1; platform_system == 'Darwin'",
    "openai>=1.51.0",
    "pydantic>=2.9.0",
    "pymupdf>=1.24.10",
    "pypdf>=5.1.0",
    "pytesseract>=0.3.13",
    "rapidocr-onnxruntime>=1.2.3; python_version < '3.13'",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[project.scripts]
financial-report-decode = "financial_report_decode.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]
